--- a/asset/style/index.scss
+++ b/asset/style/index.scss
@@ -1,4 +1,10 @@
 @import "component/variable";
 @import "lib/lib";
 
-@import "component/text";
+@import "component/header";
+@import "component/experte";
+@import "component/professionnels";
+@import "component/surmesure";
+@import "component/carousel";
+@import "component/contacter";
+@import "component/footer";
