--- a/asset/style/component/experte.scss
+++ b/asset/style/component/experte.scss
@@ -11,8 +11,22 @@
 }
 
 #experte .img-experte {
+    right: 0;
     top: 50%;
-    left: 70%;
-    transform: translate(-50%, -50%);
+    transform: translate(10%, -50%);
+    height: 300px;
 
+    @media screen and (min-width: 800px) {
+        right: 0;
+        top: 50%;
+        transform: translate(10%, -50%);
+        height: 500px;
+    }
+
+    @media screen and (min-width: 1000px) {
+        top: 50%;
+        left: 75%;
+        transform: translate(-50%, -50%);
+        height: 500px;
+    }
 }
