--- a/asset/style/component/header.scss
+++ b/asset/style/component/header.scss
@@ -9,3 +9,11 @@ header a {
 header i {
     color: $secondary-color;
 }
+
+header .hide {
+    display: block;
+
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
+}
